--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,8 +28,9 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
+    - name: Make gradlew executable
+      run: chmod +x ./gradlew
     - name: Build with Gradle
-      continue-on-error: true
       uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
       with:
         arguments: build
