--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
-name: build with Gradle
+name: test
 
 on:
   push:
@@ -35,8 +35,8 @@ jobs:
       with:
         arguments: build
     - name: Publish Unit Test Results
-      uses: EnricoMi/publish-unit-test-result-action/composite@v1
+      uses: mikepenz/action-junit-report@v3
       if: always()
       with:
-       files: "test-results/**/*.xml"
+       files: '/build/test-results/test/TEST-*.xml'
     
