--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,5 +38,5 @@ jobs:
       uses: mikepenz/action-junit-report@v3
       if: always()
       with:
-       files: '/build/test-results/test/TEST-*.xml'
+       report_paths: '/build/test-results/test/TEST-*.xml'
     
