--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Run Unit Tests
       uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
       with:
-        arguments: build
+        arguments: tests:test
     - name: Publish Unit Test Results
       uses: mikepenz/action-junit-report@v3
       if: always()
